--- a/doc/thesis/methods.tex
+++ b/doc/thesis/methods.tex
@@ -183,7 +183,8 @@ have been developed to compensate for it. Tanabe et al. and Smith et al.
 demonstrated that this component is prevalent, and may in fact be an inherent  characteristic
 of FMRI \cite{Tanabe2002, Smith1999}. It has been reported that in some studies as
 many as half the voxels
-benefited from detrending \cite{Smith2007}. In a head to head comparison,
+benefited from detrending \cite{Smith2007}. In comparison of high pass 
+filters, 
 Tanabe et al.  showed that in most cases subtracting off
 a spline worked the best \cite{Tanabe2002}.
 Unfortunately no method will
