--- a/doc/paper/main.tex
+++ b/doc/paper/main.tex
@@ -633,11 +633,39 @@ for analyzing FMRI data.
 
 \subsection{Simulation}
 \label{sec:MethodsSim}
+\begin{table}[t]
+\centering
+\begin{tabular}{|c |c | c | c | c | c | c | c |}
+\hline
+Region & $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  \\
+\hline
+1 & 1.454& 0.321& 0.369& 0.036& 0.994& 2.774& 1.348\\
+2 &1.151&  0.353& 0.380& 0.026& 1.98&  2.333& 1.645 \\
+3 &1.951&  0.317& 0.348& 0.027& 1.657& 3.719& 0.757 \\
+4 &1.203 & 0.310& 0.326& 0.036& 2.168& 2.272& 0.086\\
+\hline
+\end{tabular}
+\caption{Actual parameters for each regions in the POSSUM simulated slice.
+Regions shown in \autoref{fig:simslice_mask}.}
+\label{tab:simsliceparams}
+\end{table}
+
 Single voxel simulations were performed by propagating the BOLD
 model forward through time with 2000 integration points per
 second, then adding I.I.D. Gaussian noise and a Wiener process
-with I.I.D. steps. 
-Full volume simulation were performed using 
+with I.I.D. steps. For all single voxel simulations,
+the signal was generated using the following parameters:
+$\{\tau_0 = 1.45, \alpha = 0.3, E_0 = 0.47, V_0 = 0.044, 
+\tau_s = 1.94, \tau_f = 1.99, \epsilon = 1.8\}$,
+with measurement noise ($\sigma_y$) of $0.001$ and drift standard deviation
+($\sigma_x$) of $0.0005$. Two separate tests are discussed in the
+results. A single voxel test was performed with for 2400 seconds with random
+stimuli (Poisson distributed, $\lambda = 1$ event per second) lasting 
+$0.1$ seconds. The second single voxel tests discussed were the 310.8
+seconds after preprocessing, and used stimulus matching 
+\autoref{sec:MethodsData}. 
+
+Full volume simulations were performed using 
 a modified version of the FSL tool POSSUM. The modifications allowed
 activation levels to be driven by spatially dependent BOLD parameter
 sets. Due to the modifications, the SNR configuration was set to 20,
@@ -697,16 +725,49 @@ $\tau_f$                      & -0.0004259 & -0.3966881 & -0.4314174 & 0.1962954
 \label{tab:long_corr}
 \end{table*}
 
-For a 2400 second simulated FMRI run, a signal was generated using the 
-following parameters:
-$\{\tau_0 = 1.45, \alpha = 0.3, E_0 = 0.47, V_0 = 0.044, \tau_s = 1.94, \tau_f = 1.99, \epsilon = 1.8\}$,
-with measurement noise ($\sigma_y$) of $0.001$ and drift standard deviation
-($\sigma_x$) of $0.0005$. The minimum and maximum error particles had MSE of $ $ and $ $,
-respectively, while the mean of the particles gave MSE of $ $. %TODO fill in errors
-The correlation matrix for the final parameter estimates is shown in \autoref{tab:long_corr}.
+%\begin{table}[t]
+%\centering
+%\begin{tabular}{|c | c | c | c | c | c | c | c | c | c |}
+%\hline
+%$\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & $ \sum \tau $ & Residual & Error\\
+%\hline
+%\rowcolor[gray]{.8}
+%1.45 & 0.3 & 0.47 & 0.044 & 1.94 & 1.99 & 1.8  & 5.38 &  & \\
+%\hline
+%\hline
+%1.2221 & 0.3449 & 0.3346 & 0.0714 & 1.6045 & 2.2753 & 1.5945 & 5.1019 &  0.003211  & 0.009876  \\
+%1.3749 & 0.3318 & 0.3630 & 0.0733 & 1.6408 & 2.1030 & 1.5763 & 5.1187 &  0.003055  & 0.009932  \\
+%1.1660 & 0.3221 & 0.3406 & 0.0822 & 1.6477 & 2.3535 & 1.2452 & 5.1672 &  0.003289  & 0.009680  \\
+%1.2318 & 0.3271 & 0.3403 & 0.0796 & 1.6270 & 2.1852 & 1.3033 & 5.0439 &  0.002847  & 0.009120  \\
+%1.1832 & 0.3179 & 0.3472 & 0.0821 & 1.5496 & 2.2912 & 1.2782 & 5.0240 &  0.003006  & 0.009713  \\
+%1.1424 & 0.334  & 0.3473 & 0.0737 & 1.6221 & 2.2908 & 1.4025 & 5.0553 &  0.002833  & 0.009485  \\
+%1.3004 & 0.3596 & 0.3564 & 0.0768 & 1.5641 & 2.1323 & 1.6034 & 4.9968 &  0.003028  & 0.010219  \\
+%1.2401 & 0.3460 & 0.3398 & 0.0891 & 1.6499 & 2.2366 & 1.2900 & 5.1265 &  0.003044  & 0.010080  \\
+%1.1709 & 0.3274 & 0.3464 & 0.0826 & 1.5373 & 2.2826 & 1.3783 & 4.9909 &  0.003345  & 0.010329  \\
+%1.1897 & 0.3434 & 0.3355 & 0.0798 & 1.5358 & 2.3075 & 1.4277 & 5.0330 &  0.003175  & 0.010015  \\
+%1.184 &  0.3405 & 0.3502 & 0.0892 & 1.6103 & 2.2793 & 1.1645 & 5.0735 &  0.002889  & 0.009505  \\
+%\hline
+%1.2187 & 0.3359 & 0.3456 & 0.0800 & 1.599 & 2.2488 & 1.3876 & 5.0665 & 0.003066     & 0.009814 \\
+%\hline
+%\end{tabular}
+%\caption{Estimated Parameters on 11 separate 310.8 second runs. 
+%    True value in first row,
+%    and average in last. Residual measured as $\sqrt{MSE}$ with noisy signal,
+%    Error measured as $\sqrt{MSE}$ with true (noiseless) signal.}
+%\label{tab:LowNoiseResults}
+%\end{table}
+
+The minimum and maximum error particles had MSE of $ $ and $ $,
+respectively, while the mean of the particles gave MSE of $ $. 
+%TODO fill in errors
+The correlation matrix for the final parameter estimates is shown in 
+\autoref{tab:long_corr}.
 The significant correlation of parameters indicate that no one estimate of 
-particles dominate the solution. Additionally, given the very low error in the BOLD,
-the energy graph is full of global minima. The final histogram for a single active region, 
+particles dominate the solution. Additionally, given the very low error in 
+the BOLD,
+the energy graph is full of global minima. 
+
+The final histogram for a single active region, 
 with a single set of true parameters is shown in \autoref{fig:slicesim_hist2}.
 This also indicates that ill-defined nature of the parameters. 
 
