--- a/doc/paper/main.tex
+++ b/doc/paper/main.tex
@@ -619,7 +619,8 @@ from the timeseries, the resulting timeseries was divided by the original
 sample mean. To compensate for the BOLD signal not generally being zero-mean,
 the Median-Absolute-Deviation was added to the final signal (\autoref{eq:mad}). 
 \begin{equation}
-y_{\text{gain}, 0:K} = 1.4826\underset{i=0:K}{\text{median}}(y_i - \text{median}(y_{0:K}))
+y_{\text{gain}, 0:K} = 1.4826\underset{i=0:K}{\text{median}}(y_i - 
+        \text{median}(y_{0:K}))
 \label{eq:mad}
 \end{equation}
 
@@ -688,21 +689,21 @@ below with time 0 corresponding to the beginning of
 the 10th TR (so 9 images were dropped).
 
 The timing of the single flashes were:
-1.706, 11.944, 17.063, 18.769, 34.125, 39.244, 44.231, 47.644, 49.350,
-61.294, 64.706, 66.413, 69.825, 71.531, 73.238, 76.650, 80.063,
-90.169, 96.994, 110.644, 117.469, 120.881, 130.988, 132.694, 154.875,
-158.288, 161.700, 165.113, 168.525, 176.925, 178.631, 183.750, 190.575,
-204.225, 205.931, 211.050, 216.038, 222.863, 226.275, 236.513, 248.456,
-255.281, 258.563, 263.681, 273.919, 277.331, 287.569, 292.688, 294.394,
-299.381
+\small{1.706, 11.944, 17.063, 18.769, 34.125, 39.244, 44.231, 47.644, 49.350, 
+61.294, 64.706, 66.413, 69.825, 71.531, 73.238, 76.650, 80.063, 
+90.169, 96.994, 110.644, 117.469, 120.881, 130.988, 132.694, 154.875, 
+158.288, 161.700, 165.113, 168.525, 176.925, 178.631, 183.750, 190.575, 
+204.225, 205.931, 211.050, 216.038, 222.863, 226.275, 236.513, 248.456, 
+255.281, 258.563, 263.681, 273.919, 277.331, 287.569, 292.688, 294.394, 
+299.381}
 
 Timing of the double flashes were:
-0.131, 6.825, 20.475, 27.300, 35.831, 52.763, 54.469, 59.588, 86.756,
-91.875, 107.231, 108.938, 112.350, 114.056, 115.763, 119.175, 126.000,
-134.400, 136.106, 141.225, 144.638, 156.581, 159.994, 166.819, 171.806,
-175.219, 185.456, 188.869, 202.519, 212.756, 217.744, 221.156, 227.981,
-229.688, 233.100, 243.338, 245.044, 246.750, 250.163, 261.975, 270.506,
-272.213, 280.744, 282.450, 289.275, 296.100, 301.088, 304.500
+\small{ 0.131, 6.825, 20.475, 27.300, 35.831, 52.763, 54.469, 59.588, 86.756, 
+91.875, 107.231, 108.938, 112.350, 114.056, 115.763, 119.175, 126.000, 
+134.400, 136.106, 141.225, 144.638, 156.581, 159.994, 166.819, 171.806, 
+175.219, 185.456, 188.869, 202.519, 212.756, 217.744, 221.156, 227.981, 
+229.688, 233.100, 243.338, 245.044, 246.750, 250.163, 261.975, 270.506, 
+272.213, 280.744, 282.450, 289.275, 296.100, 301.088, 304.500 }
 
 \section{Results}
 \label{sec:Results}
@@ -725,78 +726,111 @@ $\tau_f$                      & -0.0004259 & -0.3966881 & -0.4314174 & 0.1962954
 \label{tab:long_corr}
 \end{table*}
 
-%\begin{table}[t]
-%\centering
-%\begin{tabular}{|c | c | c | c | c | c | c | c | c | c |}
-%\hline
-%$\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$  & $ \sum \tau $ & Residual & Error\\
-%\hline
-%\rowcolor[gray]{.8}
-%1.45 & 0.3 & 0.47 & 0.044 & 1.94 & 1.99 & 1.8  & 5.38 &  & \\
-%\hline
-%\hline
-%1.2221 & 0.3449 & 0.3346 & 0.0714 & 1.6045 & 2.2753 & 1.5945 & 5.1019 &  0.003211  & 0.009876  \\
-%1.3749 & 0.3318 & 0.3630 & 0.0733 & 1.6408 & 2.1030 & 1.5763 & 5.1187 &  0.003055  & 0.009932  \\
-%1.1660 & 0.3221 & 0.3406 & 0.0822 & 1.6477 & 2.3535 & 1.2452 & 5.1672 &  0.003289  & 0.009680  \\
-%1.2318 & 0.3271 & 0.3403 & 0.0796 & 1.6270 & 2.1852 & 1.3033 & 5.0439 &  0.002847  & 0.009120  \\
-%1.1832 & 0.3179 & 0.3472 & 0.0821 & 1.5496 & 2.2912 & 1.2782 & 5.0240 &  0.003006  & 0.009713  \\
-%1.1424 & 0.334  & 0.3473 & 0.0737 & 1.6221 & 2.2908 & 1.4025 & 5.0553 &  0.002833  & 0.009485  \\
-%1.3004 & 0.3596 & 0.3564 & 0.0768 & 1.5641 & 2.1323 & 1.6034 & 4.9968 &  0.003028  & 0.010219  \\
-%1.2401 & 0.3460 & 0.3398 & 0.0891 & 1.6499 & 2.2366 & 1.2900 & 5.1265 &  0.003044  & 0.010080  \\
-%1.1709 & 0.3274 & 0.3464 & 0.0826 & 1.5373 & 2.2826 & 1.3783 & 4.9909 &  0.003345  & 0.010329  \\
-%1.1897 & 0.3434 & 0.3355 & 0.0798 & 1.5358 & 2.3075 & 1.4277 & 5.0330 &  0.003175  & 0.010015  \\
-%1.184 &  0.3405 & 0.3502 & 0.0892 & 1.6103 & 2.2793 & 1.1645 & 5.0735 &  0.002889  & 0.009505  \\
-%\hline
-%1.2187 & 0.3359 & 0.3456 & 0.0800 & 1.599 & 2.2488 & 1.3876 & 5.0665 & 0.003066     & 0.009814 \\
-%\hline
-%\end{tabular}
-%\caption{Estimated Parameters on 11 separate 310.8 second runs. 
-%    True value in first row,
-%    and average in last. Residual measured as $\sqrt{MSE}$ with noisy signal,
-%    Error measured as $\sqrt{MSE}$ with true (noiseless) signal.}
-%\label{tab:LowNoiseResults}
-%\end{table}
+%TODO double check the error measurement, add min/max/mean errors for the runs
+\begin{table}[!t]
+\renewcommand{\arraystretch}{1.3}
+\centering
+\begin{tabular}{|c | c | c | c | c | c | c | }
+\hline
+$\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$ \\
+\hline
+\rowcolor[gray]{.8}
+1.45 & 0.3 & 0.47 & 0.044 & 1.94 & 1.99 & 1.8  \\
+\hline
+\hline
+1.2221 & 0.3449 & 0.3346 & 0.0714 & 1.6045 & 2.2753 & 1.5945 \\
+1.3749 & 0.3318 & 0.3630 & 0.0733 & 1.6408 & 2.1030 & 1.5763 \\
+1.1660 & 0.3221 & 0.3406 & 0.0822 & 1.6477 & 2.3535 & 1.2452 \\
+1.2318 & 0.3271 & 0.3403 & 0.0796 & 1.6270 & 2.1852 & 1.3033 \\
+1.1832 & 0.3179 & 0.3472 & 0.0821 & 1.5496 & 2.2912 & 1.2782 \\
+1.1424 & 0.334  & 0.3473 & 0.0737 & 1.6221 & 2.2908 & 1.4025 \\
+1.3004 & 0.3596 & 0.3564 & 0.0768 & 1.5641 & 2.1323 & 1.6034 \\
+1.2401 & 0.3460 & 0.3398 & 0.0891 & 1.6499 & 2.2366 & 1.2900 \\
+1.1709 & 0.3274 & 0.3464 & 0.0826 & 1.5373 & 2.2826 & 1.3783 \\
+1.1897 & 0.3434 & 0.3355 & 0.0798 & 1.5358 & 2.3075 & 1.4277 \\
+1.184 &  0.3405 & 0.3502 & 0.0892 & 1.6103 & 2.2793 & 1.1645 \\
+\hline
+1.2187 & 0.3359 & 0.3456 & 0.0800 & 1.599 & 2.2488 & 1.3876 \\
+\hline
+\end{tabular}
+\caption{Estimated Parameters on 11 separate 310.8 second runs. 
+    True value in first row,
+    and average in last.}
+\label{tab:LowNoiseResults}
+\end{table}
 
-The minimum and maximum error particles had MSE of $ $ and $ $,
-respectively, while the mean of the particles gave MSE of $ $. 
 %TODO fill in errors
-The correlation matrix for the final parameter estimates is shown in 
-\autoref{tab:long_corr}.
-The significant correlation of parameters indicate that no one estimate of 
-particles dominate the solution. Additionally, given the very low error in 
-the BOLD,
-the energy graph is full of global minima. 
+The final square root Mean-Squared-Error (between the estimated and 
+noiseless BOLD signal) for the 2400s run was %TODO
+and the final correlation matrix is shown in \autoref{tab:long_corr}.
 
-The final histogram for a single active region, 
-with a single set of true parameters is shown in \autoref{fig:slicesim_hist2}.
-This also indicates that ill-defined nature of the parameters. 
+The final parameter estimates of the 310.8s runs are shown in
+\autoref{tab:LowNoiseResults}; the square-root MSE for these
+parameters ranged from $0.002833$ to $0.003345$, with a mean of 
+$0.003066$. Peak signals reached levels of $0.025$.
 
-%parameters:
-%&1.151&  0.353& 0.380& 0.026& 1.98&  2.333& 1.645 \\
+\begin{figure}[!t]
+\subfloat[Region labels for simulated slice.]
+{\includegraphics[width=3cm]{images/simregions.png}\label{fig:simslice_mask}}
+\hfil
+\subfloat[Mutual Information Map. Scale is bits. Higher (yellow) is better.]
+{\label{fig:sim_hm_mi} \includegraphics[width=4cm]{images/sim_hm_15_6.png}}
+\subfigure{\includegraphics[width=.6cm]{images/scale6.png}}
+\caption{Comparison of activation with greymatter, parameter regions.}
+\label{fig:simslice_hm}
+\end{figure}
+
+%todo fix these histograms with marker for true value and drop A1,A2
 \begin{figure*}[!t] %top left
 \centering
 \includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist2}
 \caption{Histogram of estimated parameters. Average SNR in the region was 
 $0.97$ and Mutual Information between simulation and BOLD estimate was greater 
-than $0.15$. TODO: add actual error.}
+than $0.15$.}
 \label{fig:slicesim_hist2}
 \end{figure*}
 
-\begin{figure}[!t]
-\subfloat[Region labels for simulated slice.]
-{\includegraphics[width=2.5in]{images/simregions.png}\label{fig:simslice_mask}}
-\hfil
-\subfloat[Mutual Information Map. Scale is bits. Higher (yellow) is better.]
-{\label{fig:sim_hm_mi} \includegraphics[width=2.5in]{images/sim_hm_mi}}
-\caption{Comparison of activation with greymatter, parameter regions.}
-\label{fig:simslice_hm}
-\end{figure}
+\begin{figure*}[!t] %top left
+\centering
+\includegraphics[clip=true,trim=2.5cm 2cm 2cm 1cm,width=15cm]{images/slicesim_hist3}
+\caption{Histogram of estimated parameters for region 3. Average SNR in the 
+region was 
+$0.39$ and Mutual Information between simulation and BOLD estimate was greater 
+than $0.15$.}
+\label{fig:slicesim_hist3}
+\end{figure*}
 
-\begin{itemize}
-\item Long Single Result: Correlation Matrix, error in estimate
-\item Possum Results: Histogram of parameters for a region
-\item FMRI Results: Activation maps comparing M.I. with SPM
-\end{itemize}
+In the POSSUM simulation, areas passing a threshold of
+mutual information of $0.15$  are shown in 
+\autoref{fig:sim_hm_mi}
+whereas the active region numbers are shown in 
+\autoref{fig:simslice_mask}.
+Note that region 4 had a very small $\epsilon$ and so
+had an extremely low $SNR$ ($<.1$). The histograms of parameter
+estimates for sections
+2 and 3 are shown in \autoref{fig:slicesim_hist2} and 
+\autoref{fig:slicesim_hist3}, respectively. Region 1 is
+left out because of the low number of points and because
+its SNR was between region 2 and region 3 ($0.8$), so it
+was a less interesting result.
+
+\subsection{Real Data}
+\begin{figure*}
+\centering
+\subfigure[]{\label{fig:hm_spm} \includegraphics[scale=.85]{images/spm_hm}}
+\subfigure[]{\label{fig:hm_canon_spm_x} \includegraphics[scale=3]{images/spm_hm_x}}
+\subfigure[]{\label{fig:hm_canon_spm_y} \includegraphics[scale=3]{images/spm_hm_y}}
+\subfigure[]{\label{fig:hm_canon_spm_z} \includegraphics[scale=3]{images/spm_hm_z}}
+\subfigure{\label{fig:scale_spm} \includegraphics[scale=.5]{images/scale1}}
+\caption{SPM results. Units of activation are in Student's $t$-scores; higher indicates higher
+        assurance that the signal cannot have occurred through noise alone.
+        Sagittal, coronal and axial slices  are
+        \autoref{fig:hm_canon_spm_x}, \autoref{fig:hm_canon_spm_y}, and
+         \autoref{fig:hm_canon_spm_z}, respectively. A series of axial slices are
+         shown in \autoref{fig:hm_spm}. }
+\label{fig:hm_canon_spm}
+\end{figure*}
+
 
 \section{Discussion}
 \label{sec:Discussion}
