added correct error range for the simulations

--- a/doc/paper/main.tex
+++ b/doc/paper/main.tex
@@ -726,7 +726,6 @@ $\tau_f$                      & -0.0004259 & -0.3966881 & -0.4314174 & 0.1962954
 \label{tab:long_corr}
 \end{table*}
 
-%TODO double check the error measurement, add min/max/mean errors for the runs
 \begin{table}[!t]
 \renewcommand{\arraystretch}{1.3}
 \centering
@@ -759,15 +758,15 @@ $\tau_0$ & $\alpha$ & $E_0$    & $V_0$    & $\tau_s$ & $\tau_f$ & $\epsilon$ \\
 \label{tab:LowNoiseResults}
 \end{table}
 
-%TODO fill in errors
 The final square root Mean-Squared-Error (between the estimated and 
-noiseless BOLD signal) for the 2400s run was %TODO
+noiseless BOLD signal) for the 2400s run was $0.00381$, signal
+peaks were $0.035$
 and the final correlation matrix is shown in \autoref{tab:long_corr}.
 
 The final parameter estimates of the 310.8s runs are shown in
 \autoref{tab:LowNoiseResults}; the square-root MSE for these
-parameters ranged from $0.002833$ to $0.003345$, with a mean of 
-$0.003066$. Peak signals reached levels of $0.025$.
+parameters ranged from $0.00147$ to $0.0027$, with a mean of 
+$0.00217$. Peak signals reached levels of $0.025$.
 
 \begin{figure}[!t]
 \subfloat[Region labels for simulated slice.]
